// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileSerializer : getInfoAuthorizedUser : should return info about user 1`] = `
{
  "data": {
    "attributes": {
      "ava": null,
      "email": "111@11.1",
      "fullName": undefined,
      "lastName": "bbbb",
      "login": "Artem",
      "status": "1",
    },
    "id": 1,
    "type": "User",
  },
  "links": {
    "self": "http://localhost:5000/api/profile/user",
  },
}
`;

exports[`ProfileSerializer : getStatus : should return status 1`] = `
{
  "data": {
    "attributes": {
      "ava": null,
      "email": "111@11.1",
      "fullName": undefined,
      "lastName": "bbbb",
      "login": "Artem",
      "status": "1",
    },
    "id": 1,
    "type": "User",
  },
  "links": {
    "self": "http://localhost:5000/api/profile/status/1",
  },
}
`;

exports[`ProfileSerializer : updateStatus : should return new status 1`] = `
{
  "data": {
    "attributes": {
      "ava": null,
      "email": "111@11.1",
      "fullName": undefined,
      "lastName": "bbbb",
      "login": "Artem",
      "status": "1",
    },
    "id": 1,
    "type": "User",
  },
  "links": {
    "self": "http://localhost:5000/api/profile/status",
  },
}
`;
